client/styles/main.css
.header {
  position: fixed;
  top: 0px;
  left: 0px;
  width:100%;
}

#photos md-checkbox {
  position : absolute;
  top:5px;
  left:5px;
}

#photos md-checkbox.md-checked + * img {
  border : solid 4px red;
}

#photos a, #photos img, #photos pc-selection-item {
  /* padding: 1px; */
  width: 100%;
  height: 100%;
  box-sizing: border-box;
}

/* ===== photo ===== */

#prev {
  position: fixed;
  left: 5px;
  top: 50%;
  z-index:1; //need for video
}

#next {
  position: fixed;
  right: 5px;
  top: 50%;
  z-index:1; //need for video
}

#picture {
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
  width:100%;
  height:100%
}

#photo md-toolbar.transparent-toolbar {
  opacity: 0.65;
}

.panel {
  margin: 5px;
}

.transparent-panel {
  opacity: 0.75;
}

.animate-show-hide.ng-hide-add,
.animate-show-hide.ng-hide-remove {
  transition: all linear 0.5s;
}

.animate-show-hide.ng-hide {
  opacity: 0 !important;
}

